--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -32,6 +32,10 @@ body {
 .logo {
   width: 40px;
   height: 40px;
+
+  &:hover path {
+    fill: $light-green;
+  }
 }
 
 @media (min-width: 700px) {
